--- a/lesson08/load.html
+++ b/lesson08/load.html
@@ -6,18 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="./test.css" class="spy">
 </head>
 
 <body>
     <section class="gallery">
-        <img class="image" src="./images/1.jpg">
-        <img class="image" src="./images/2.jpg">
-        <img class="image" src="./images/3.jpg">
+        <img class="image spy" src="./images/1.jpg">
+        <img class="image spy" src="./images/2.jpg">
+        <img class="image spy" src="./images/3.jpg">
     </section>
-    <script src="https://kit.fontawesome.com/80d0029610.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/80d0029610.js" class="spy" crossorigin="anonymous"></script>
     <script>
+        const spies = document.querySelectorAll('.spy');
 
+        function onSpyLoad(event) {
+            console.log(event.target);
+        }
+
+        spies.forEach(spy => {
+            spy.onload = onSpyLoad;
+        });
+
+        window.onload = onSpyLoad;
     </script>
 </body>
 
