lesson08 video09 time 10:20

--- a/lesson08/bubbling.html
+++ b/lesson08/bubbling.html
@@ -55,7 +55,10 @@
             const outerSquare = document.querySelector('.outer-square');
 
             outerSquare.addEventListener('click', (event) => {
+                event.stopPropagation();
                 console.log('outer-square click');
+
+                console.log(event.target);
             });
 
             document.body.addEventListener('click', (event) => {
