lesson08 video09 time 14:20

--- a/lesson08/bubbling.html
+++ b/lesson08/bubbling.html
@@ -59,6 +59,14 @@
                 console.log('outer-square click');
 
                 console.log(event.target);
+
+                const color = event.target.dataset.color;
+
+                if (!color) {
+                    return;
+                }
+
+                document.body.style.background = color;
             });
 
             document.body.addEventListener('click', (event) => {
