--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Формы</h1>
     <form>
-        <input><button>Отправить</button>
+        <input name="login" placeholder="Имя пользователя"><button>Отправить</button>
     </form>
 </body>
 
