--- a/lesson09/result.html
+++ b/lesson09/result.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <h1>Формы</h1>
-    <form action="result.html" method="POST">
-        <input name="login" placeholder="Имя пользователя"><button>Отправить</button>
-    </form>
+    <h1>Спасибо, форма отправлена</h1>
 </body>
 
 </html>
