lesson09 video02 time 15:50

--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <h1>Формы</h1>
-    <form action="result.html" method="POST">
-        <input name="login" placeholder="Имя пользователя"><button>Отправить</button>
+    <form action="result.html" method="GET">
+        <input name="login" placeholder="Имя пользователя">
+        <input name="password" placeholder="Пароль"><button>Отправить</button>
     </form>
 </body>
 
