lesson09 video02 time 17:20

--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Формы</h1>
-    <form action="result.html" method="POST">
+    <form action="result.html" method="POST" enctype="multipart/form-data">
         <input name="login" placeholder="Имя пользователя">
         <input name="password" placeholder="Пароль"><button>Отправить</button>
     </form>
