lesson09 video03 time 10:30

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -13,7 +13,7 @@
     <form class="form" action="result.hmtl">
         <div class="field form__field form__field_group-title">
             <label for="group-title">Название группы</label>
-            <input id="group-title" class="field__control">
+            <input id="group-title" name="group-title" class="field__control">
         </div>
         <button>Отправить</button>
     </form>
