lesson09 video04 time 03:30

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -49,7 +49,7 @@
         groupCountFieldControl.addEventListener('input', (event) => {
             const target = event.target;
 
-            console.log(target.value);
+            console.log(typeof target.value);
             console.log('input');
         });
         groupCountFieldControl.addEventListener('change', () => {
