lesson09 video04 time 04:25

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -17,7 +17,15 @@
         </div>
         <div class="field form__field form__field_group-count">
             <label for="group-count">Количество студентов</label>
-            <input id="group-count" name="group-count" class="field__control" type="number">
+            <input
+                id="group-count"
+                name="group-count"
+                class="field__control"
+                type="number"
+                max="100"
+                min="10"
+                step="5"
+            >
         </div>
         <button>Отправить</button>
     </form>
