lesson09 video05 time 03:20

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -13,7 +13,12 @@
     <form class="form" action="result.hmtl">
         <div class="field form__field form__field_group-title">
             <label for="group-title">Название группы</label>
-            <input id="group-title" name="group-title" class="field__control">
+            <input
+                id="group-title"
+                name="group-title"
+                class="field__control"
+                maxlength="32"
+            >
         </div>
         <div class="field form__field form__field_group-count">
             <label for="group-count">Количество студентов</label>
