--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -18,6 +18,7 @@
                 name="group-title"
                 class="field__control"
                 maxlength="32"
+                readonly
             >
         </div>
         <div class="field form__field form__field_group-count">
@@ -30,6 +31,7 @@
                 max="100"
                 min="10"
                 step="5"
+                disabled
             >
         </div>
         <button>Отправить</button>
