--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -11,8 +11,9 @@
 <body>
     <h1>Формы</h1>
     <form action="result.html" method="POST" enctype="multipart/form-data">
-        <input name="login" placeholder="Имя пользователя">
-        <input name="password" placeholder="Пароль"><button>Отправить</button>
+        <input name="login" placeholder="Имя пользователя" autocomplete="off">
+        <input name="password" placeholder="Пароль">
+        <button>Отправить</button>
     </form>
 </body>
 
