lesson09 video06 time 04:15

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -89,7 +89,7 @@
         groupAgreeFieldControl.addEventListener('input', (event) => {
             const target = event.target;
 
-            console.log(target.value);
+            console.dir(target);
             console.log('input');
         });
         groupAgreeFieldControl.addEventListener('change', () => {
