lesson09 video08 time 04:35

--- a/lesson09/elements.html
+++ b/lesson09/elements.html
@@ -73,6 +73,7 @@
                 id="group-type"
                 name="group-type"
                 class="field__control"
+                multiple
             >
                 <option value="FD">Фронтенд разработка</option>
                 <option value="QA">Тестирование</option>
