lesson09 video10 time 06:10

--- a/lesson09/form.html
+++ b/lesson09/form.html
@@ -94,8 +94,9 @@
 
         function getFieldValue (fieldElement) {
             const control = fieldElement.querySelector('.field__control');
+            const key = control.name;
 
-            return control.value;
+            return { [key] : control.value};
         }
 
         form.addEventListener('submit', function (event) {
