lesson09 video10 time 12:35

--- a/lesson09/form.html
+++ b/lesson09/form.html
@@ -125,9 +125,16 @@
 
             const fields = formTarget.querySelectorAll('.form__field');
 
+            let result = {};
+
             fields.forEach(field => {
-                console.log(getFieldValue(field));
+                result = {
+                    ...result,
+                    ...getFieldValue(field),
+                };
             });
+
+            console.log(result);
         });
     </script>
 </body>
