--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
-    <form>
+    <form class="form">
         <input required>
         <button>Отправить</button>
     </form>
+    <script>
+        const form = document.querySelector('.form');
+
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+
+            console.log('submit');
+        });
+    </script>
 </body>
 
 </html>
