lesson10 video02 time 14:50

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -15,6 +15,10 @@
             <label for="group-title">Название группы</label>
             <input id="group-title" name="group-title" class="field__control" required>
         </div>
+        <div class="field form__field form__field_mentor-email">
+            <label for="mentor-email">E-mail преподавателя</label>
+            <input id="mentor-email" name="mentor-email" class="field__control" type="email">
+        </div>
         <button>Отправить</button>
     </form>
     <script>
