lesson10 video02 time 17:10

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="field form__field form__field_mentor-email">
             <label for="mentor-email">E-mail преподавателя</label>
-            <input id="mentor-email" name="mentor-email" class="field__control" type="email">
+            <input id="mentor-email" name="mentor-email" class="field__control" type="email" required>
         </div>
         <button>Отправить</button>
     </form>
