lesson10 video02 time 17:50

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -19,6 +19,11 @@
             <label for="mentor-email">E-mail преподавателя</label>
             <input id="mentor-email" name="mentor-email" class="field__control" type="email" required>
         </div>
+        <div class="field form__field form__field_group-count">
+            <label for="group-count">Количество студентов</label>
+            <input id="group-count" name="group-count" class="field__control" type="number" max="100" min="10" step="5"
+                required>
+        </div>
         <button>Отправить</button>
     </form>
     <script>
