lesson10 video02 time 19:10

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -13,7 +13,7 @@
     <form class="form">
         <div class="field form__field form__field_group-title">
             <label for="group-title">Название группы</label>
-            <input id="group-title" name="group-title" class="field__control" required>
+            <input id="group-title" name="group-title" class="field__control" required maxlength="20">
         </div>
         <div class="field form__field form__field_mentor-email">
             <label for="mentor-email">E-mail преподавателя</label>
