--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -24,6 +24,15 @@
             <input id="group-count" name="group-count" class="field__control" type="number" max="100" min="10" step="5"
                 required>
         </div>
+        <div class="field form__field form__field_credit-card">
+            <label for="credit-card">Кредитная карта</label>
+            <input
+                id="credit-card"
+                name="credit-card"
+                class="field__control"
+                pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$"
+                required>
+        </div>
         <button>Отправить</button>
     </form>
     <script>
