--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Валидация форм</h1>
-    <form class="form">
+    <form class="form" novalidate>
         <div class="field form__field form__field_group-title">
             <label for="group-title">Название группы</label>
             <input id="group-title" name="group-title" class="field__control" required maxlength="20">
