lesson10 video03 time 01:55

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -41,6 +41,8 @@
         form.addEventListener('submit', (event) => {
             event.preventDefault();
 
+            console.dir(event.target);
+
             console.log('submit');
         });
     </script>
