lesson10 video03 time 04:00

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -41,7 +41,9 @@
         form.addEventListener('submit', (event) => {
             event.preventDefault();
 
-            console.dir(event.target);
+            const form = event.target;
+
+            console.log(form.checkValidity());
 
             console.log('submit');
         });
